--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.1",
     "bootstrap-vue": "^2.16.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
